# dreamci

./: README.md  configure.ac
src/: .cproject  .project  Makefile  _dh_params.h  assign.c  descrambler.c  descrambler.h  dh_rsa_misc.c  dh_rsa_misc.h  dreamciplus.c  dreamciplus.i  enigma2_pre_start_ciplus.sh  journal.c  list.c  list.h  main.c  misc.c  misc.h  nohup.c  pid.c  res_app_info.c  res_app_mmi.c  res_ca_support.c  res_cam_upgrade.c  res_content_ctrl.c  res_datetime.c  res_fifo.c  res_host_ctrl.c  res_host_lac.c  res_mmi.c  res_multi_crypt.c  resource.h  session.h  socket.c  socket.h
